{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 23,
  "lineage": "692001ef-d894-81c4-e935-4ee45da81268",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-079fa984f5d242936",
            "default_route_table_id": "rtb-079fa984f5d242936",
            "id": "rtb-079fa984f5d242936",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06acb0ddea9f6635e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_lab2_aws "
            },
            "tags_all": {
              "Name": "route_table_lab2_aws "
            },
            "timeouts": null,
            "vpc_id": "vpc-064a68bc4cd452172"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab1",
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-03679b9f22fd621b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03679b9f22fd621b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a55d339e55de33bf",
            "private_dns": "ip-10-0-0-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00bc7489acd45d73b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bb323cee342fb35",
            "tags": {
              "Name": "lab1_instance"
            },
            "tags_all": {
              "Name": "lab1_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4bfc4cb6e2aee5a"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:internet-gateway/igw-06acb0ddea9f6635e",
            "id": "igw-06acb0ddea9f6635e",
            "owner_id": "724690408369",
            "tags": {
              "Name": "igw_lab2"
            },
            "tags_all": {
              "Name": "igw_lab2"
            },
            "vpc_id": "vpc-064a68bc4cd452172"
          },
          "dependencies": [
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:security-group/sg-09d0d5ef914db84ce",
            "description": "Allow  http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0d5ef914db84ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "Http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "724690408369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_http"
            },
            "tags_all": {
              "Name": "sg_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bf003b722e5e784"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-09bb323cee342fb35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb323cee342fb35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_lab2_subnet"
            },
            "tags_all": {
              "Name": "aws_lab2_subnet"
            },
            "vpc_id": "vpc-064a68bc4cd452172"
          },
          "dependencies": [
            "aws_vpc.lab1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:vpc/vpc-064a68bc4cd452172",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb0e605cc8540336",
            "default_route_table_id": "rtb-079fa984f5d242936",
            "default_security_group_id": "sg-0b4bfc4cb6e2aee5a",
            "dhcp_options_id": "dopt-0c9045477746072cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064a68bc4cd452172",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079fa984f5d242936",
            "owner_id": "724690408369",
            "tags": {
              "Name": "vpc_aws_lab1"
            },
            "tags_all": {
              "Name": "vpc_aws_lab1"
            }
          }
        }
      ]
    }
  ]
}